# cookiecutter_pyproject

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  noxfile.py  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/docs/: explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
