{%- set license_classifiers = {
    'Beerware': 'License :: Freely Distributable',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[project]
name = "{{ cookiecutter.project_slug }}"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["version", "description"]

{%- if cookiecutter.remote_git_repo != "" %}
[project.urls]
source = "{{ cookiecutter.remote_git_repo }}"
{%- endif %}

# [project.scripts]
# script_name = "{{ cookiecutter.project_slug }}:function"

authors = [
    {name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"},
]

# see https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
{%- if cookiecutter.open_source_license in license_classifiers %}
    "{{ license_classifiers[cookiecutter.open_source_license] }}",
{%- endif %}
]

dependencies = [

]

[dependency-groups]
dev = [
    "flit",
    "keyring",
    "pre-commit",
    "ruff >= 0.3",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
]
test = [
    "nox",
    "pytest >= 4.0.0",
    "pytest-cov",
    "pytest-icdiff",
    "pytest-mock",
    "pytest-randomly",
]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"


[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration test (deselect with '-m \"not integration\"')",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-ra",
]

[tool.ruff]
# see https://docs.astral.sh/ruff/configuration/

line-length = 80
indent-width = 4

fix = true

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
fixable = ["ALL"]
select = ["ALL"]
ignore = [
    # ignored for now, should be activated in the future
    # docstrings
    "D",

    # ignored, "ruff format" will handle this
    "COM812",
    "ISC001",

    # ignored, due to Windows / WSL2 setup
    # flake8-executable
    "EXE",
]

[tool.ruff.lint.per-file-ignores]
# see https://github.com/charliermarsh/ruff
"tests/*" = ["FBT003", "INP001", "PLR2004", "S101", "SLF001", "ANN"]
"noxfile.py" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"  # Accepts: "google", "numpy", or "pep257".

